AmpShare SF Codebase/force-app/main/default/objects/ssot__Asset__dlm/ssot__Asset__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Asset</labelOverride>
        <masterLabel>Asset</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
        <referenceEntityGroup>Asset</referenceEntityGroup>
        <referenceEntityName>Asset</referenceEntityName>
        <referenceEntitySubjectArea>Asset</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>