AmpShare SF Codebase/force-app/main/default/objects/ssot__Asset__dlm/fields/Charger_Power__c.field-meta.xml
<CustomField>
    <fullName>Charger_Power__c</fullName>
    <label>Charger Power</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Charger Power</labelOverride>
        <masterLabel>Charger Power</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>