AmpShare SF Codebase/force-app/main/default/objects/ssot__Asset__dlm/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>Country</labelOverride>
        <masterLabel>Country</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>