AmpShare SF Codebase/force-app/main/default/objects/ssot__Asset__dlm/fields/is_deleted__c.field-meta.xml
<CustomField>
    <fullName>is_deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_deleted</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>is_deleted</labelOverride>
        <masterLabel>is_deleted</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>