AmpShare SF Codebase/force-app/main/default/objects/ssot__Asset__dlm/fields/Manufacturer_year__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_year__c</fullName>
    <label>Manufacturer year</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <labelOverride>Manufacturer year</labelOverride>
        <masterLabel>Manufacturer year</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>